--- a/rps.css
+++ b/rps.css
@@ -35,7 +35,6 @@ body {
     justify-content: space-around;
     align-items: center;
     font-size: 2.5rem;
-    margin: 3% 10% 3% 7%;
     color: #2c2e3081;
     font-family: 'Indie Flower', cursive;
     letter-spacing: 2px;
@@ -74,55 +73,24 @@ body {
     height: 80%;
 }
 
-@media (max-width: 768px) {
-    :root {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-    }
-    body {
-        height: 100%;
-        width: 100%;
-    }
-    .container{
+@media only screen and (max-width: 675px){
+    .container {
+        border: 2px solid blue;
         width: 100%;
         height: 100%;
         margin: 0;
-        border: 1px solid green;
     }
-    .players {
-        font-size: 2rem;
-        justify-content: space-evenly;
-    }
-    .scores {
-        margin: 0;
-    }
-  }
-
-  @media (max-width: 350px) {
-    :root {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-    }
-    body {
-        height: 100%;
-        width: 100%;
-    }
-    .container{
-        width: 100%;
-        height: 100%;
-        margin: 0;
-        border: 1px solid green;
-    }
-    .players {
-        font-size: 1.5rem;
-        justify-content: space-evenly;
-    }
-    .scores {
-        margin: 0;
-    }
-  }
+   .players{
+       font-size: 1.9rem;
+   }
+   .scores {
+       margin: 0;
+       font-size: 2rem;
+   }
+   .icons {
+       padding-top: 15%;
+   }
+}
 
 
 
